--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи: каталог продукции</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
       <div class="page-header__wrapper site-wrapper">
-        <a class="page-header__logo-link logo-link" href="#">
+        <a class="page-header__logo-link logo-link" href="index.html">
           <img class="logo-link__logo-picture" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
@@ -37,9 +38,9 @@
           <ul class="basic-products__list basic-products-list">
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом курицы.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy PRO 500 г</h3>
+                <img class="basic-card__image" src="./img/pro-chiсken-500.png" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом курицы.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy PRO 500 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -60,9 +61,9 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом курицы.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy PRO 1000 г</h3>
+                <img class="basic-card__image" src="./img/pro-chiсken-1000.png" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом курицы.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy PRO 1000 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -83,9 +84,9 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом рыбы.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy PRO 500 г</h3>
+                <img class="basic-card__image" src="./img/pro-fish-500.png" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом рыбы.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy PRO 500 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -106,9 +107,9 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом рыбы.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy PRO 1000 г</h3>
+                <img class="basic-card__image" src="./img/pro-fish-1000.png" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом рыбы.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy PRO 1000 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -129,9 +130,9 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом гречки.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy SLIM 500 г</h3>
+                <img class="basic-card__image" src="./img/slim-buckwheat-500.png" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом гречки.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy SLIM 500 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -152,9 +153,9 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy slim 1000 грамм со вкусом гречки.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy SLIM 1000 г</h3>
+                <img class="basic-card__image" src="./img/slim-buckwheat-1000.png" width="140" height="107" alt="Cat Energy slim 1000 грамм со вкусом гречки.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy SLIM 1000 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -175,9 +176,9 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="#" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом риса.">
-                <div class="basic-card__container-description container-description">
-                  <h3 class="container-description__title title-basic-card">Cat Energy SLIM 500 г</h3>
+                <img class="basic-card__image" src="./img/slim-rice-500.png" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом риса.">
+                <div class="basic-card__container-description container-description container-description--dark">
+                  <h3 class="container-description__title">Cat Energy SLIM 500 г</h3>
                   <dl class="container-description__list">
                     <div class="container-description__item">
                       <dt class="container-description__characteristic">Масса</dt>
@@ -213,7 +214,7 @@
           <ul class="additional-products__list additional-products-list">
             <li class="additional-products-list__item">
               <article class="additional-products-list__container additional-card">
-                <h3 class="additional-card__title title-additional-card">Сахарозаменитель</h3>
+                <h3 class="additional-card__title">Сахарозаменитель</h3>
                 <dl class="additional-card__description-list">
                   <div class="additional-card__description-item">
                     <dt class="additional-card__characteristic">1 упаковка (100 г)</dt>
@@ -225,7 +226,7 @@
             </li>
             <li class="additional-products-list__item">
               <article class="additional-products-list__container additional-card">
-                <h3 class="additional-card__title title-additional-card">Питьевая вода</h3>
+                <h3 class="additional-card__title">Питьевая вода</h3>
                 <dl class="additional-card__description-list">
                   <div class="additional-card__description-item">
                     <dt class="additional-card__characteristic">5 литров</dt>
@@ -237,7 +238,7 @@
             </li>
             <li class="additional-products-list__item">
               <article class="additional-products-list__container additional-card">
-                <h3 class="additional-card__title title-additional-card">Молоко</h3>
+                <h3 class="additional-card__title">Молоко</h3>
                 <dl class="additional-card__description-list">
                   <div class="additional-card__description-item">
                     <dt class="additional-card__characteristic">1 литр</dt>
@@ -249,7 +250,7 @@
             </li>
             <li class="additional-products-list__item">
               <article class="additional-products-list__container additional-card">
-                <h3 class="additional-card__title title-additional-card">Витамины</h3>
+                <h3 class="additional-card__title">Витамины</h3>
                 <dl class="additional-card__description-list">
                   <div class="additional-card__description-item">
                     <dt class="additional-card__characteristic">1 упаковка (30 г)</dt>
@@ -260,22 +261,24 @@
               </article>
             </li>
           </ul>
-          <p class="additional-products__action">Закажите все и получите чехол для кота в подарок!</p>
+          <div class="additional-products__wrapper-action">
+            <p class="additional-products__action-text">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </section>
       </div>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper site-wrapper">
-        <section class="page-footer__cooperation cooperation">
+      <section class="page-footer__cooperation cooperation cooperation--dark">
+        <div class="cooperation__wrapper site-wrapper">
           <h2 class="visually-hidden">Сотрудничество.</h2>
           <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
           <address class="cooperation__address">
             <a class="cooperation__link" href="#" target="_blank">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
           </address>
-        </section>
-      </div>
-      <img class="page-footer__map map-adress" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
-      <div class="site-wrapper">
+        </div>
+      </section>
+      <img class="page-footer__map map-adress" src="./img/map-adress.png" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      <div class="page-footer__wrapper site-wrapper">
         <a class="page-footer__logo-link logo-link" href="index.html">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
         </a>
@@ -304,7 +307,7 @@
             HTML Academy
           </a>
           <a class="copyright__link-logo" href="https://htmlacademy.ru/" target="_blank">
-            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="currentColor" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
