--- a/source/form.html
+++ b/source/form.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи: подбор программы</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
       <div class="page-header__wrapper site-wrapper">
-        <a class="page-header__logo-link logo-link" href="#">
+        <a class="page-header__logo-link logo-link" href="index.html">
           <img class="logo-link__logo-picture" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
@@ -32,78 +33,78 @@
     <main class="main-container">
       <div class="main-container__wrapper site-wrapper">
         <h1 class="main-container__title">Подбор программы</h1>
-        <p class="main-container__description main-container-description"></p>
+        <p class="main-container__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
         <form class="main-container__form form-program" action="https://echo.htmlacademy.ru/" method="post">
-          <fieldset class="form-program__group form-group-basic">
+          <fieldset class="form-program__group form-group form-group--basic">
             <legend class="visually-hidden">Основные данные.</legend>
-            <ul class="form-group-basic__list form-list-basic">
-              <li class="form-list-basic__item">
-                <label class="form-list-basic__title form-list-title" for="form-list-basic-field-name">Имя:*</label>
-                <input class="form-list-basic__field" type="text" id="form-list-basic-field-name" name="name-pet" placeholder="Барсик" required>
+            <ul class="form-group__list form-list form-list--basic">
+              <li class="form-list__item">
+                <label class="form-list__title" for="form-list-field-name">Имя:*</label>
+                <input class="form-list__field" type="text" id="form-list-field-name" name="name-pet" placeholder="Барсик" required>
               </li>
-              <li class="form-list-basic__item">
-                <label class="form-list-basic__title form-list-title" for="form-list-basic-field-weight">Вес (кг):*</label>
-                <input class="form-list-basic__field" type="number" id="form-list-basic-field-weight" name="weight-pet" placeholder="7" required>
+              <li class="form-list__item">
+                <label class="form-list__title" for="form-list-field-weight">Вес (кг):*</label>
+                <input class="form-list__field" type="number" id="form-list-field-weight" name="weight-pet" placeholder="7" required>
               </li>
-              <li class="form-list-basic__item">
-                <label class="form-list-basic__title form-list-title" for="form-list-basic-field-age">Возраст (лет):</label>
-                <input class="form-list-basic__field" type="number" id="form-list-basic-field-age" name="age-pet" placeholder="7">
+              <li class="form-list__item">
+                <label class="form-list__title" for="form-list-field-age">Возраст (лет):</label>
+                <input class="form-list__field" type="number" id="form-list-field-age" name="age-pet" placeholder="7">
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form-program__group form-group-target">
+          <fieldset class="form-program__group form-group form-group--target">
             <legend class="visually-hidden">Цель.</legend>
-            <ul class="form-group-target__list form-list-target">
-              <li class="form-list-target__item">
-                <input class="form-list-target__field" type="radio" id="form-list-target-field-slim" name="target" value="slim" checked>
-                <label class="form-list-target__title form-list-title" for="form-list-target-field-slim">Похудение</label>
+            <ul class="form-group__list form-list form-list--target">
+              <li class="form-list__item">
+                <input class="form-list__field" type="radio" id="form-list-field-slim" name="target" value="slim" checked>
+                <label class="form-list__title" for="form-list-field-slim">Похудение</label>
               </li>
-              <li class="form-list-target__item">
-                <input class="form-list-target__field" type="radio" id="form-list-target-field-pro" name="target" value="pro">
-                <label class="form-list-target__title form-list-title" for="form-list-target-field-pro">Набор массы</label>
+              <li class="form-list__item">
+                <input class="form-list__field" type="radio" id="form-list-field-pro" name="target" value="pro">
+                <label class="form-list__title" for="form-list-field-pro">Набор массы</label>
               </li>
-              <li class="form-list-target__item">
-                <input class="form-list-target__field" type="radio" id="form-list-target-field-advice" name="target" value="advice">
-                <label class="form-list-target__title form-list-title" for="form-list-target-field-advice">Не знаю (нужен ваш совет)</label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="form-program__group form-group-contacts">
-            <legend class="form-group-contacts__title">Контактные данные (владельца кота)</legend>
-            <ul class="form-group-contacts__list form-list-contacts">
-              <li class="form-list-contacts__item">
-                <label class="form-list-contacts__title form-list-title" for="form-list-target-field-email">E-mail:*</label>
-                <input class="form-list-contacts__field" type="email" id="form-list-target-field-email" name="email" placeholder="кuklachev@gmail.com" required>
-              </li>
-              <li class="form-list-contacts__item">
-                <label class="form-list-contacts__title form-list-title" for="form-list-target-field-tel">Телефон:*</label>
-                <input class="form-list-contacts__field" type="tel" id="form-list-target-field-tel" name="tel" placeholder="8 (960) 900-60-90" required>
+              <li class="form-list__item">
+                <input class="form-list__field" type="radio" id="form-list-field-advice" name="target" value="advice">
+                <label class="form-list__title form-list-title" for="form-list-field-advice">Не знаю (нужен ваш совет)</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form-program__group form-group-comments">
-            <legend class="form-group-comments__title">Комментарий</legend>
-            <label class="visually-hidden" for="form-group-comments-field">Комментарий в свободной форме.</label>
-            <textarea class="form-group-comments__field" id="form-group-comments-field" name="comments" placeholder="Расскажите обо всех повадках кота"></textarea>
+          <fieldset class="form-program__group form-group form-group--contacts">
+            <legend class="form-group__title">Контактные данные (владельца кота)</legend>
+            <ul class="form-group__list form-list form-list--contacts">
+              <li class="form-list__item">
+                <label class="form-list__title" for="form-list-field-email">E-mail:*</label>
+                <input class="form-list__field" type="email" id="form-list-field-email" name="email" placeholder="кuklachev@gmail.com" required>
+              </li>
+              <li class="form-list__item">
+                <label class="form-list__title" for="form-list-field-tel">Телефон:*</label>
+                <input class="form-list__field" type="tel" id="form-list-field-tel" name="tel" placeholder="8 (960) 900-60-90" required>
+              </li>
+            </ul>
           </fieldset>
-          <fieldset class="form-program__group form-group-additionally">
-            <legend class="form-group-additionally__title">Дополнительно</legend>
-            <ul class="form-group-additionally__list form-list-additionally">
-              <li class="form-list-additionally__item">
-                <input class="form-list-additionally__field" type="checkbox" id="form-list-additionally-field-sweetener" name="sweetener" checked>
-                <label class="form-list-additionally__title form-list-title" for="form-list-additionally-field-sweetener">Сахарозаменитель</label>
+          <fieldset class="form-program__group form-group form-group--comments">
+            <legend class="form-group__title">Комментарий</legend>
+            <label class="visually-hidden" for="form-group-field-comments">Комментарий в свободной форме.</label>
+            <textarea class="form-group__field" id="form-group-field-comments" name="comments" placeholder="Расскажите обо всех повадках кота"></textarea>
+          </fieldset>
+          <fieldset class="form-program__group form-group form-group--additionally">
+            <legend class="form-group__title">Дополнительно</legend>
+            <ul class="form-group__list form-list form-list--additionally">
+              <li class="form-list__item">
+                <input class="form-list__field" type="checkbox" id="form-list-field-sweetener" name="sweetener" checked>
+                <label class="form-list__title" for="form-list-field-sweetener">Сахарозаменитель</label>
               </li>
-              <li class="form-list-additionally__item">
-                <input class="form-list-additionally__field" type="checkbox" id="form-list-additionally-field-milk" name="milk">
-                <label class="form-list-additionally__title form-list-title" for="form-list-additionally-field-milk">Молоко</label>
+              <li class="form-list__item">
+                <input class="form-list__field" type="checkbox" id="form-list-field-milk" name="milk">
+                <label class="form-list__title" for="form-list-field-milk">Молоко</label>
               </li>
-              <li class="form-list-additionally__item">
-                <input class="form-list-additionally__field" type="checkbox" id="form-list-additionally-field-water" name="water">
-                <label class="form-list-additionally__title form-list-title" for="form-list-additionally-field-water">Питьевая вода</label>
+              <li class="form-list__item">
+                <input class="form-list__field" type="checkbox" id="form-list-field-water" name="water">
+                <label class="form-list__title" for="form-list-field-water">Питьевая вода</label>
               </li>
-              <li class="form-list-additionally__item">
-                <input class="form-list-additionally__field" type="checkbox" id="form-list-additionally-field-vitamins" name="vitamins">
-                <label class="form-list-additionally__title form-list-title" for="form-list-additionally-field-vitamins">Витамины</label>
+              <li class="form-list__item">
+                <input class="form-list__field" type="checkbox" id="form-list-field-vitamins" name="vitamins">
+                <label class="form-list__title" for="form-list-field-vitamins">Витамины</label>
               </li>
             </ul>
           </fieldset>
@@ -115,17 +116,17 @@
       </div>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper site-wrapper">
-        <section class="page-footer__cooperation cooperation">
+      <section class="page-footer__cooperation cooperation cooperation--dark">
+        <div class="cooperation__wrapper site-wrapper">
           <h2 class="visually-hidden">Сотрудничество.</h2>
           <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
           <address class="cooperation__address">
             <a class="cooperation__link" href="#" target="_blank">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
           </address>
-        </section>
-      </div>
-      <img class="page-footer__map map-adress" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
-      <div class="site-wrapper">
+        </div>
+      </section>
+      <img class="page-footer__map map-adress" src="./img/map-adress.png" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      <div class="page-footer__wrapper site-wrapper">
         <a class="page-footer__logo-link logo-link" href="index.html">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
         </a>
@@ -154,7 +155,7 @@
             HTML Academy
           </a>
           <a class="copyright__link-logo" href="https://htmlacademy.ru/" target="_blank">
-            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="currentColor" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
