--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи: главная страница</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -15,7 +16,7 @@
           <button class="page-navigation__toggle" type="button">
             <span class="visually-hidden">Открыть меню.</span>
           </button>
-          <ul class="page-navigation__list site-list site-list--black">
+          <ul class="page-navigation__list site-list">
             <li class="site-list__item site-list__item--current">
               <a class="site-list__link link-navigation" href="#">Главная</a>
             </li>
@@ -30,15 +31,17 @@
       </div>
     </header>
     <main class="main-container">
-      <div class="main-container__wrapper site-wrapper">
-        <h1 class="visually-hidden">Интернет-магазин: Кэт энерджи.</h1>
-        <section class="promo">
+      <h1 class="visually-hidden">Интернет-магазин: Кэт энерджи.</h1>
+      <section class="main-container__promo promo">
+        <div class="promo__wrapper site-wrapper">
           <h2 class="promo__title promo__title--white">Функциональное питание для котов</h2>
-          <p class="promo__slogan promo__slogan--black">Занялся собой? Займись котом!</p>
-          <img class="promo__image" src="#" width="280" height="270" alt="Пример товара из каталога.">
-          <button class="promo__button button" type="button">Подобрать программу</button>
-        </section>
-        <section class="programs-container">
+          <p class="promo__slogan promo__slogan--white">Занялся собой? Займись котом!</p>
+          <img class="promo__image" src="./img/promo-image-mobile.png" width="280" height="270" alt="Пример товара из каталога.">
+          <a class="promo__button button" href="form.html">Подобрать программу</a>
+        </div>
+      </section>
+      <section class="main-container__programs-container programs-container">
+        <div class="programs-container__wrapper site-wrapper">
           <h2 class="visually-hidden">Наши программы.</h2>
           <ul class="programs-container__list program-list">
             <li class="program-list__item">
@@ -56,8 +59,10 @@
               </article>
             </li>
           </ul>
-        </section>
-        <section class="about-us">
+        </div>
+      </section>
+      <section class="main-container__about-us about-us">
+        <div class="about-us__wrapper site-wrapper">
           <h2 class="visually-hidden">Преимущества нашего функционального питания.</h2>
           <p class="about-us__title">Как это работает</p>
           <ul class="about-us__list advantages-list">
@@ -69,8 +74,10 @@
               обычной еды на наше функциональное питание.</li>
             <li class="advantages-list__item advantages-list__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
           </ul>
-        </section>
-        <section class="work-examples">
+        </div>
+      </section>
+      <section class="main-container__work-examples work-examples">
+        <div class="work-examples__wrapper site-wrapper">
           <h2 class="visually-hidden">Пример прохождения нашей программы.</h2>
           <p class="work-examples__title">Живой пример</p>
           <p class="work-examples__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -84,41 +91,38 @@
                 <dd class="work-examples__description">60 дней</dd>
             </div>
             <div class="work-examples__item work-examples__item--total-sum">
-              <dt class="work-examples__number">Затраты на питание:</dt>
-                <dd class="work-examples__description">15 000 руб.</dd>
+              <dt class="work-examples__number work-examples__number--total-sum">Затраты на питание:</dt>
+                <dd class="work-examples__description work-examples__description--total-sum">15 000 руб.</dd>
             </div>
           </dl>
           <div class="work-examples__slider slider">
             <div class="slider__before">
-              <img class="slider__image-before" src="#" width="280" height="256" alt="Фото кота Бориса до прохождения программы.">
-              <button class="slider__button-before slider-button" type="button">
-                <span class="visually-hidden">Переместить кнопку вправо.</span>
-              </button>
+              <img class="slider__image-before" src="./img/slider-cat-before.png" width="280" height="256" alt="Фото кота Бориса до прохождения программы.">
             </div>
+            <button class="slider__button slider-button" type="button">
+              <span class="visually-hidden">Переместить кнопку влево или вправо.</span>
+            </button>
             <div class="slider__after">
-              <img class="slider__image-after" src="#" width="280" height="256" alt="Фото кота Бориса после прохождения программы.">
-              <button class="slider__button-after slider-button" type="button">
-                <span class="visually-hidden">Переместить кнопку влево.</span>
-              </button>
+              <img class="slider__image-after" src="./img/slider-cat-after.png" width="280" height="256" alt="Фото кота Бориса после прохождения программы.">
             </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper site-wrapper">
-        <section class="page-footer__cooperation cooperation">
+      <section class="page-footer__cooperation cooperation cooperation--light">
+        <div class="cooperation__wrapper site-wrapper">
           <h2 class="visually-hidden">Сотрудничество.</h2>
           <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
           <address class="cooperation__address">
             <a class="cooperation__link" href="#" target="_blank">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
           </address>
-        </section>
-      </div>
-      <img class="page-footer__map map-adress" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
-      <div class="site-wrapper">
+        </div>
+      </section>
+      <img class="page-footer__map map-adress" width="320" height="362" src="./img/map-adress.png" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      <div class="page-footer__wrapper site-wrapper">
         <a class="page-footer__logo-link logo-link" href="#">
-          <img class="logo-link__logo-text" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
+          <img class="logo-link__logo-text logo-link__logo-text--footer" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
         </a>
         <section class="page-footer__social social">
           <h2 class="visually-hidden">Наши социальные сети.</h2>
@@ -145,7 +149,7 @@
             HTML Academy
           </a>
           <a class="copyright__link-logo" href="https://htmlacademy.ru/" target="_blank">
-            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="currentColor" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
